--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+	<dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-simple</artifactId>
+    <version>1.7.21</version>
+    <scope>runtime</scope>
+</dependency>
+    
   </dependencies>
   
    <reporting>
@@ -29,6 +37,9 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-checkstyle-plugin</artifactId>
           <version>3.1.1</version>
+          <configuration>
+          	<configLocation>google_check.xml</configLocation>
+          </configuration>
           <reportSets>
             <reportSet>
               <reports>
